--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Historical horse population in Canada"
-output: github_document
+bibliography: references.bib
+output: 
+  html_document:
+      toc: true 
 ---
 
 ```{r setup, include=FALSE}
@@ -21,8 +24,6 @@ horse_pop <- filter(horse_pop,
                     DATE == "At June 1 (x 1,000)",
                     GEO != "Canada")
 horse_pop$Value <- horse_pop$Value * 1000
-`r object
-`
 ```
 
 Horse population data were sourced from the [Government of Canada's Open Data website](http://open.canada.ca/en/open-data). Specifically, these two sources were used:
@@ -32,11 +33,11 @@ Horse population data were sourced from the [Government of Canada's Open Data we
 
 ## Methods
 
-The R programming language and the following R packages were used to perform the analysis: knitr and tidyverse. The code used to perform the analysis and create this report can be found here: <https://github.com/ttimbers/equine_numbers_value_canada_rmd>.
+The R programming language [@R] and the following R packages were used to perform the analysis: knitr [@knitr] and tidyverse [@tidyverse]. The code used to perform the analysis and create this report can be found here: <https://github.com/ttimbers/equine_numbers_value_canada_rmd>.
 
 ## Results
 
-```{r plot horses, fig.width=10, fig.height=3, fig.cap = "Historical number of horses per province in Canada", out.width="100%"}
+```{r plot horses, fig.width=10, fig.height=3, fig.cap = "Figure 1. Historical number of horses per province in Canada", out.width="100%"}
 horse_plot <- ggplot(horse_pop, aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
@@ -61,12 +62,13 @@ max_horses <- horse_pop %>%
   summarize(Maximum = max(Value),
             Minimum = min(Value))
 
-knitr::kable(max_horses, caption = "Table 1. Range of the number of horses for each province between 1940 - 1972")
+kable(max_horses, 
+      caption = "Table 1. Range of the number of horses for each province between 1940 - 1972")
 ```
 
 Below we zoom in and look at the province of Alberta:
 
-```{r plot province, fig.width=5, fig.height=4, fig.cap = "Historical number of horses per province in Canada", out.width = "50%"}
+```{r plot province, fig.width=5, fig.height=4, fig.cap = "Figure 2. Historical number of horses per province in Canada", out.width = "100%"}
 province_plot <- horse_pop %>% 
   filter(GEO == "Alberta") %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
@@ -80,3 +82,5 @@ province_plot <- horse_pop %>%
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 province_plot
 ```
+
+## References
